--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               </span>
               <input type="text" class="form-control input-group-text border-0 text-start"
                 aria-label="Dollar amount (with dot and two decimal places)"
-                placeholder="Prova a cercare: Lezioni di Lavarel">
+                placeholder="Prova a cercare: Lezioni di Laravel">
             </div>
           </div>
           <div class="col-auto">
@@ -159,12 +159,13 @@
                 <h3>Boolean <span class="badge text my-bg fs-6">Piano blaze</span></h3>
                 <ol class="breadcrumb">
                   <li class="breadcrumb-item text-white fs-6"><span class="badge text my-bg">3 app</span></li>
-                  <li class=" breadcrumb-item text-white fs-6 ps-1" aria-current="page"><span class="badge text my-bg">Boolean
+                  <li class=" breadcrumb-item text-white fs-6 ps-1" aria-current="page"><span class="badge text my-bg bool">Boolean
                       mobile app</span></li>
-                  <li class=" text-white fs-6 ps-1" aria-current="page"><span class="badge text my-bg">Boolean
+                  <li class=" text-white fs-6 ps-1" aria-current="page"><span class="badge text my-bg bool">Boolean
                       web app</span></li>
-                  <li class=" text-white fs-6 ps-1" aria-current="page"><span class="badge text my-bg">Boolean
+                  <li class=" text-white fs-6 ps-1" aria-current="page"><span class="badge text my-bg bool">Boolean
                       blog app</span></li>
+                  <li class=" text-white fs-6 ps-1" aria-current="page"><span><i class="fa-solid fa-plus icon circle my-bg"></i></span></li>
                 </ol>
               </nav>
             </div>
@@ -193,7 +194,7 @@
                         <td class="table-2">15 Febbraio 2021</td>
                         <td class="table-2">20%</td>
                         <td><span class="badge text-bg-success">Done</span></td>
-                        <td><button type="button" class="btn btn-light me-0"><i
+                        <td><button type="button" class="btn btn-light me-2"><i
                               class="fa-solid fa-pen"></i></button><button type="button" class="btn btn-light"><i
                               class="fa-solid fa-trash"></i></button></td>
                       </tr>
@@ -202,7 +203,7 @@
                         <td class="table-2">16 Febbraio 2021</td>
                         <td class="table-2">20%</td>
                         <td><span class="badge text-bg-success">Done</span></td>
-                        <td><button type="button" class="btn btn-light me-0"><i
+                        <td><button type="button" class="btn btn-light me-2"><i
                               class="fa-solid fa-pen"></i></button><button type="button" class="btn btn-light"><i
                               class="fa-solid fa-trash"></i></button></td>
                       </tr>
@@ -211,7 +212,7 @@
                         <td class="table-2">17 Febbraio 2021</td>
                         <td class="table-2">20%</td>
                         <td><span class="badge text-bg-warning text-light">process</span></td>
-                        <td><button type="button" class="btn btn-light me-0"><i
+                        <td><button type="button" class="btn btn-light me-2"><i
                               class="fa-solid fa-pen"></i></button><button type="button" class="btn btn-light"><i
                               class="fa-solid fa-trash"></i></button></td>
                       </tr>
@@ -220,7 +221,7 @@
                         <td class="table-2">18 Febbraio 2021</td>
                         <td class="table-2">20%</td>
                         <td><span class="badge text-bg-success">Done</span></td>
-                        <td><button type="button" class="btn btn-light me-0"><i
+                        <td><button type="button" class="btn btn-light me-2"><i
                               class="fa-solid fa-pen"></i></button><button type="button" class="btn btn-light"><i
                               class="fa-solid fa-trash"></i></button></td>
                       </tr>
@@ -229,7 +230,7 @@
                         <td class="table-2">19 Febbraio 2021</td>
                         <td class="table-2">20%</td>
                         <td><span class="badge text-bg-danger">failed</span></td>
-                        <td><button type="button" class="btn btn-light me-0"><i
+                        <td><button type="button" class="btn btn-light me-2"><i
                               class="fa-solid fa-pen"></i></button><button type="button" class="btn btn-light"><i
                               class="fa-solid fa-trash"></i></button></td>
                       </tr>
@@ -238,7 +239,7 @@
                         <td class="table-2">20 Febbraio 2021</td>
                         <td class="table-2">20%</td>
                         <td><span class="badge text-bg-success">Done</span></td>
-                        <td><button type="button" class="btn btn-light me-1"><i
+                        <td><button type="button" class="btn btn-light me-2"><i
                               class="fa-solid fa-pen"></i></button><button type="button" class="btn btn-light"><i
                               class="fa-solid fa-trash"></i></button></td>
                       </tr>
@@ -327,13 +328,13 @@
                       Kickoff nuove classi
                     </label>
                   </div>
-                  <div class="form-check border-bottom bg-body pt-1 ps-5 ">
+                  <div class="form-check border-bottom bg-body pt-1 pb-1 ps-5 ">
                     <input class="form-check-input" type="checkbox" value="check">
                     <label class="form-check-label" for="flexCheckChecked">
                       Lezione su Bootstrap 5 in classe #75
                     </label>
                   </div>
-                  <div class="form-check border-bottom bg-body pt-1 ps-5">
+                  <div class="form-check border-bottom bg-body pt-1 pb-1 ps-5">
                     <input class="form-check-input" type="checkbox" value="check">
                     <label class="form-check-label" for="flexCheckDefault">
                       Controllare username github nuovi studenti
