--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <div class="main-content">
         <div class="container-fluid bg-primary text-white">
           <div class="row flex-lg-row-reverse">
-            <div class="col-12 col-lg-4 pt-2 pb-2">
+            <div class="col-12 col-lg-4 pt-3 pb-2">
               <p>Nuovo Studente</p>
               <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop"
                 aria-controls="staticBackdrop">
@@ -150,11 +150,11 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-lg-4 pt-2 pb-2">
+            <div class="col-12 col-lg-4 pt-3 pb-2">
               <p>Studenti online negli ultimi 30 minuti</p>
               <span class="fs-3">125</span>
             </div>
-            <div class="col-12 col-lg-4 pt-2 pb-2">
+            <div class="col-12 col-lg-4 pt-3 ">
               <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                 <h3>Boolean <span class="badge text my-bg fs-6">Piano blaze</span></h3>
                 <ol class="breadcrumb">
@@ -248,7 +248,7 @@
                         <td class="table-2">21 Febbraio 2021</td>
                         <td class="table-2">20%</td>
                         <td><span class="badge text-bg-danger">failed</span></td>
-                        <td><button type="button" class="btn btn-light me-1"><i
+                        <td><button type="button" class="btn btn-light me-2"><i
                               class="fa-solid fa-pen"></i></button><button type="button" class="btn btn-light"><i
                               class="fa-solid fa-trash"></i></button></td>
                       </tr>
@@ -257,7 +257,7 @@
                         <td class="table-2">22 Febbraio 2021</td>
                         <td class="table-2">20%</td>
                         <td><span class="badge text-bg-success">Done</span></td>
-                        <td><button type="button" class="btn btn-light me-1"><i
+                        <td><button type="button" class="btn btn-light me-2"><i
                               class="fa-solid fa-pen"></i></button><button type="button" class="btn btn-light"><i
                               class="fa-solid fa-trash"></i></button></td>
                       </tr>
