--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
       <div class="main-content">
         <div class="container-fluid bg-primary text-white">
           <div class="row flex-lg-row-reverse">
-            <div class="col-12 col-lg-4 pt-3 pb-2">
+            <div class=" d-flex justify-content-center align-items-baseline col-12 col-lg-4 pb-2 pt-2">
               <p>Nuovo Studente</p>
               <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop"
                 aria-controls="staticBackdrop">
-                <span><i class="fa-solid fa-plus icon border"></i></span>
+                <i class="fa-solid fa-plus icon border"></i>
               </button>
               <div class="offcanvas offcanvas-end " data-bs-backdrop="static" tabindex="-1" id="staticBackdrop"
                 aria-labelledby="staticBackdropLabel">
@@ -155,7 +155,7 @@
               <span class="fs-3">125</span>
             </div>
             <div class="col-12 col-lg-4 pt-3 ">
-              <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+              <nav style="--bs-breadcrumb-divider: '>>';" aria-label="breadcrumb">
                 <h3>Boolean <span class="badge text my-bg fs-6">Piano blaze</span></h3>
                 <ol class="breadcrumb">
                   <li class="breadcrumb-item text-white fs-6"><span class="badge text my-bg">3 app</span></li>
